# Space_Artifact

./: CMakeLists.txt  README.md
cs4722/: artifact_elliptical_orbit.h
lib/cs4722/: artifact.h  buffer_utilities.h  callbacks.h  view.h  x11.h
lib/glad/: gl.h
lib/learnopengl/: shader.h
simulation/: simulation.cpp  vertex_shader.glsl
